@@ -1,6 +1,11 @@
 # PIDEV-3A45-GenZ
  ## Projet développement Web Java Desktop
  ## 🧰 Présentation du PIDEV
+  ## Important - To Run this project you'll need to set these following libraries ##
+        jfoenix-9.0.10
+  ## VM Options - Application Configuration ##  
+        --module-path "path\to\yourJavaFX_SDK\lib" --add-modules javafx.controls,javafx.fxml,javafx.web
+  
  Projet permettant de créer une application ayant 3 clients Java Web et mobile tout en assurant la communication entre ces derniers à travers une base de données commune
  ### Sprint 1:
  Sprint JAVA
